# 30_day_challenge_arjan_codes

./: .gitignore  README.md
01_challenge_kiss/: after_v1.py  after_v2.py  before.py  pyproject.toml
02_challenge_type_annotations/: after_v1.py  before.py  pyproject.toml
03_challenge_decoupling/: Decreasing_Coupling.md  diagnose.md
03_challenge_decoupling/after/: bank.py  main.py
03_challenge_decoupling/before/: bank.py  main.py  pyproject.toml  stripe_service.py
04_challenge_dry/: DRYviolations.md  after.py  before.py  pyproject.toml
05_challenge_string_formatting/: after.py  before.py  pyproject.toml
06_challenge_demeter/: after.py  before.py  pyproject.toml
07_challenge_improve_discount/: after.py  before.py  pyproject.toml
08_challenge_payment_strategy/: after_v1_ABC.py  after_v2_Proto.py  after_v3_Functions.py  before.py  pyproject.toml
09_challenge_plugins/after/: main.py  plugin_manager.py  pyproject.toml
09_challenge_plugins/before/: main.py
09_challenge_plugins/plugin_project/: plugin_manager.py
10_challenge_oo_to_functional/: oo.py
10_challenge_oo_to_functional/after/: funcs_v1.py  funcs_v2.py  funcs_v3.py  pyproject.toml
11_challenge_cohesion/: after_v1.py  after_v2.py  before.py  notes.md  pyproject.toml
12_challenge_mvp/after/: app.py  main.py  sensor_data.csv
12_challenge_mvp/before/: app.py  main.py  pyproject.toml
13_challenge_inheritance/after/: after.py  pyproject.toml
13_challenge_inheritance/before/: before.py
14_challenge_abstraction/after/: after.py  pyproject.toml
14_challenge_abstraction/before/: before.py
15_challenge_higher_order_functions/after/: after.py  pyproject.toml
15_challenge_higher_order_functions/before/: before.py
16_challenge_config_file/after/: after.py  config.json
16_challenge_config_file/before/: before.py  pyproject.toml
17_challenge_concurrency/after/: main.py  pyproject.toml
17_challenge_concurrency/after_solution/: main_v1.py  main_v2.py  req_http.py
17_challenge_concurrency/before/: main.py
18_challenge_refactoring/after_solution/: main.py  texts.json  texts_nl.json  weather.py
22_challenge_sql_to_orm/before/: main.py  pyproject.toml  schema.sql  use_api.py
23_challenge_test_basic/after/: pyproject.toml  test_api.py
(+58 files in other folders)
