[tool.poetry]
name = "test_basic"
version = "0.1.0"
description = ""
authors = ["ArjanCodes <support@arjancodes.com>"]

[tool.poetry.dependencies]
python = "^3.11.4"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
pydantic = "^1.10.9"
requests = "^2.31.0"
sqlalchemy = "^2.0.16"
pytest = "^7.3.2"
httpx = "^0.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
]
